# tomasulo-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-release.yml  cmake-multi-platform.yml
src/: main.cpp
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/ui/simulator/: common_data_bus.cpp  common_data_bus.h  instruction.cpp  instruction.h  register_file.cpp  register_file.h  reorder_buffer.cpp  reorder_buffer.h  reservation_station.cpp  reservation_station.h  simulator_utils.cpp  simulator_utils.h  tomasulo_core.cpp  tomasulo_core.h
src/ui/styles/: style_dark.qss  style_light.qss
tests/: arithmetic.txt  branch_example.txt  fp_ops.txt  load_store_sequence.txt  test.txt  test_branch_logic.cpp  test_common_data_bus.cpp  test_instruction.cpp  test_instruction_extra.cpp  test_register_file.cpp  test_reorder_buffer.cpp  test_reservation_station.cpp  test_step_by_step.cpp  test_tomasulo_core.cpp
